k8s/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: api
      app.kubernetes.io/name: api
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: api
        app.kubernetes.io/managed-by: Tiller
        app.kubernetes.io/name: api
        app.kubernetes.io/version: 1.16.0
    spec:
      containers:
      - image: superjugger88/go
        name: api
        ports:
        - containerPort: 4000
          name: http
          protocol: TCP
        securityContext:
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
      securityContext:
        fsGroup: 1000
      serviceAccountName: api
