k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: http
    port: 4000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: api
    app.kubernetes.io/name: api
  type: ClusterIP
